syntax = "proto3";
package proto;
option go_package = "/proto";

message AddressRequest{
    string address = 1;
}

message AddressResponse{
    int64 id = 1;
    string address = 2;
}

service AddressRegistration{
    rpc RegisterAddress (AddressRequest) returns (AddressResponse);
}
