syntax = "proto3";
package proto;
option go_package = "/proto";

message UserRequest{
    string name = 1;
    string surname = 2;
    string email = 3;
    string password = 4;
}

message UserResponse{
    int64 id = 1;
    string name = 2;
    string surname = 3;
}

service User{
    rpc RegisterUser(UserRequest) returns (UserResponse);
}